--- a/app/layouts/mobile/mobile.scss
+++ b/app/layouts/mobile/mobile.scss
@@ -1,70 +1,19 @@
-:root {
-    --color-black: #000000;
-    --color-light-black:#41413F;
-    --color-pink:#ff7b90;
-    --color-gray:#A2A2A2;
-    --color-light-gray:#CFCFCD;
-    --color-beige:#F1EFE9;
-    --color-light-beige:#E8E5E3;
-    --color-white: rgba(250, 250, 250);
-    --font-largest:24px;
-    --font-large:18px;
-    --font-defualt:16px;
-    --font-medium:14px;
-    --font-small:12px;
-    --font-micro:10px;
-    --padding-big:16px;
-    --padding-default:12px;
-    --padding-small:8px;
-    --padding-micro:4px;
-    --zIndex-top:100;
-    --zIndex-topNav:90;
-    --zIndex-sideNav:80;
-    --zIndex-middle:50;
-    --zIndex-bottomNav:0;
-}
-
-*{
-    font-family: 'Arial';
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    z-index: var(--zIndex-middle);
-}
-body{
-    height: 100vh;
-}
-
-ul{
-    list-style: none;
-}
-
-button{
-    border: none;
-    background-color: transparent;
-    font-size: var(--font-medium);
-    cursor: pointer;
-}
-
-a{
-    text-decoration: none;
-}
-
 .m_header_nav {
     position: fixed;
-    z-index: var(--zIndex-middle);
+    z-index: var(--m-zIndex-middle);
     top: 0;
     left: 0;
     right: 0;
+    height: 30px;
     display: flex;
     justify-content: space-between;
-    padding: var(--padding-default);
-    background-color: transparent;
-
+    box-sizing: content-box;
+    padding: var(--m-padding-small) 10px 30px 10px;
+    background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0));
 
     button{
-        font-size: var(--font-largest);
-        color:var(--color-light-beige)
+        font-size: var(--m-font-largest);
+        color:var(--color-white);
     }
 
     .hamburger_btn{
@@ -73,21 +22,21 @@ a{
 
     .function_list{
         display: flex;
-        font-size: var(--font-large);
 
         li{
             display: flex;
-            margin-right: var(--padding-default) ;
+            margin: 0 var(--m-padding-micro) ;
         }
 
         .follow_btn,
         .recommend_btn{
-            color: var(--color-gray);
-
+            display: flex;
+            color: rgba(255,255,255,0.5);
+            font-size: var(--m-font-large);
         }
 
         .active{
-            color: var(--color-light-beige);
+            color: var(--color-white);
             text-decoration-line:underline;
             text-underline-offset : 10px;
         }
@@ -104,12 +53,12 @@ a{
     .bottom_nav_btn_list{
         display: flex;
         justify-content: space-around;
-        margin: var(--padding-micro) 0;
+        margin: var(--m-padding-micro) 0;
 
         button{
             display: flex;
             flex-direction: column;
-            font-size: var(--font-medium);
+            font-size: var(--m-font-medium);
             color: var(--color-light-beige);
             margin:0 auto;
             align-items: center;
@@ -118,7 +67,7 @@ a{
                 padding: 5px;
                 width: 100%;
                 height: 100%;
-                font-size: var(--font-large);
+                font-size: var(--m-font-large);
             }
 
 
@@ -155,7 +104,7 @@ a{
     }
 
     .video_blur_screen{
-        z-index: var(--zIndex-bottom);
+        z-index: var(--m-zIndex-bottom);
         position: absolute;
         width: 100%;
         height: 100vh;
@@ -164,7 +113,7 @@ a{
     }
 
     .play_btn {
-        z-index: var(--zIndex-top);
+        z-index: var(--m-zIndex-top);
         position: absolute;
         top: 50%;
         left: 50%;
@@ -177,7 +126,7 @@ a{
     position: fixed;
     width: 260px;
     height: 100vh;
-    z-index: var(--zIndex-middle);
+    z-index: var(--m-zIndex-middle);
     background-color: var(--color-white);
 
     &.open {
@@ -190,23 +139,23 @@ a{
     }
 
     .side_bar_main {
-        z-index: var(--zIndex-middle);
+        z-index: var(--m-zIndex-middle);
         border-bottom: 1px solid var(--color-light-gray);
         position: relative;
         width: 100%;
         height: fit-content;
-        padding: var(--padding-default);
+        padding: var(--m-padding-default);
         background-color: var(--color-white);
 
         .side_logo {
-            font-size: calc(var(--font-large) * 2);
+            font-size: calc(var(--m-font-large) * 2);
 
             .hamburger_btn {
-                padding: var(--padding-default);
-                font-size: calc(var(--font-large) * 2);
+                padding: var(--m-padding-default);
+                font-size: calc(var(--m-font-large) * 2);
 
                 i {
-                    padding-right: var(--padding-micro);
+                    padding-right: var(--m-padding-micro);
                 }
             }
         }
@@ -214,13 +163,13 @@ a{
         .function_list {
             .follow_btn,
             .recommend_btn {
-                padding: var(--padding-default);
-                padding-top: var(--padding-samll);
-                font-size: var(--font-largest);
+                padding: var(--m-padding-default);
+                padding-top: var(--m-padding-samll);
+                font-size: var(--m-font-largest);
 
                 i {
                     color: black;
-                    padding-right: var(--padding-big);
+                    padding-right: var(--m-padding-big);
                 }
             }
             .follow_btn.active,
@@ -234,18 +183,18 @@ a{
         }
 
         .login_btn {
-            margin: var(--padding-big) 0;
+            margin: var(--m-padding-big) 0;
             width: 100%;
             height: 50px;
             background-color: #ff7b90;
             border-radius: 5px;
-            font-size: var(--font-medium);
+            font-size: var(--m-font-medium);
             color: white;
         }
     }
 
     .side_bar_info{
-        padding: var(--padding-big);
+        padding: var(--m-padding-big);
         position: relative;
         width: 100%;
         height: fit-content;
@@ -253,18 +202,54 @@ a{
         .info_title{
             display: flex;
             color: var(--color-light-gray);
-            padding-bottom: var(--padding-small);
+            padding-bottom: var(--m-padding-small);
         }
         ul{
             display: flex;
             flex-direction: column;
 
             button{
-                padding-bottom: var(--padding-default);
-                font-size: var(--font-defualt);
+                padding-bottom: var(--m-padding-default);
+                font-size: var(--m-font-defualt);
                 font-weight: bold;
             }
         }
     }
 
+}
+
+.video_view{
+    width: 100%;
+    height: 100%;
+
+    div{
+        display: flex;
+        height: 100vh;
+
+        image{
+            height: 100vh;
+        }
+    }
+}
+
+.video_detail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.swiper {
+    width: 100%;
+    height: 100vh;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
