feat : 자동 재생 수정 23.10.22. gun

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -48,7 +48,9 @@
   z-index: var(--m-zIndex-middle);
 }
 body{
-  height: 100vh;
+  height : auto;
+  min-height: 100vh;
+  //height: 100vh;
 }
 
 ul{
