--- a/app/layouts/mobile/mobile.scss
+++ b/app/layouts/mobile/mobile.scss
@@ -79,49 +79,6 @@
         }
     }
 }
-.m_video_section {
-    height: 100%;
-    position: relative;
-    overflow-y: scroll;
-    width: 100%;
-    margin: 0;
-
-    .video_view{
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 2em;
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.9);
-        position: relative;
-        width: 100%;
-    }
-
-    video{
-        width: 100%;
-        margin: auto;
-    }
-
-    .video_blur_screen{
-        z-index: var(--m-zIndex-bottom);
-        position: absolute;
-        width: 100%;
-        height: 100vh;
-        -o-filter: blur(15px);
-        filter: brightness(20%) opacity(90%);
-    }
-
-    .play_btn {
-        z-index: var(--m-zIndex-top);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 10px 20px;
-        cursor: pointer;
-    }
-}
 .m_side_bar{
     position: fixed;
     width: 260px;
@@ -234,11 +191,11 @@
 
 .video_detail{
 
+    touch-action: pan-y;
     display: flex;
     justify-content: center;
     align-items: center;
     background: black;
-    height: 100vh;
     width: 100%;
     overflow: hidden;
 
@@ -252,19 +209,34 @@
             font-size: calc(var(--m-font-largest) * 1);
         }
     }
+    .play_btn{
+        position: absolute;
+        z-index: var(--zIndex-top);
+
+        i{
+            font-size: calc(var(--m-font-largest) * 2);
+            text-shadow: 1px 1px 1px black;
+        }
+    }
+}
+.a{
+    width: 100%;
+    height: 100vh;
 }
 
 
 .swiper {
+    touch-action: pan-y;
     overflow: hidden;
     width: 100%;
     height: 100vh;
 }
 
 .swiper-slide {
+    touch-action: pan-y;
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background-color: black;
 
     display: flex;
     justify-content: center;
