fix : swiper 버전 교체 23.10.22. gun

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -48,9 +48,8 @@
   z-index: var(--m-zIndex-middle);
 }
 body{
-  height : auto;
-  min-height: 100vh;
-  //height: 100vh;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 ul{
