--- a/app/layouts/mobile/mobile.scss
+++ b/app/layouts/mobile/mobile.scss
@@ -172,6 +172,9 @@
             }
         }
     }
+}
+
+.checkLast{
 
 }
 
@@ -194,17 +197,64 @@
     width: 100%;
     height: 100%;
 
-    .sound_con{
+    .video_btn_list{
         position: absolute;
-        z-index: 999;
-        margin-top: 150%;
-        right: var(--m-padding-big);
+        margin-top: 120%;
+        right: 0;
+        z-index: var(--zIndex-top);
+        display: flex;
+        flex-direction: column;
+        width: 50px;
+        height: fit-content;
 
-        i{
-            font-size: calc(var(--m-font-largest) * 1);
+        button{
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            width: 40px;
+            height: 40px;
+            background-color: transparent;
+            z-index: var(--zIndex-top);
+            margin-bottom: 25px;
+
+            i {
+                color: var(--color-white);
+                font-size: calc(var(--m-font-largest) * 1.1);
+            }
+            span{
+                margin-top: 2px;
+                color: var(--color-white);
+            }
+        }
+
+        .user_avatar{
+            width: 40px;
+            height: 40px;
+
+            i {
+                color: var(--color-white);
+                font-size: calc(var(--m-font-largest) * 1.2);
+                border: 2px solid var(--color-pink);
+                border-radius: 50%;
+            }
+            span{
+                margin-top: 2px;
+                color: var(--color-white);
+
+                i{
+                    border-radius: 50px;
+                    background-color: white;
+                    position: relative;
+                    color: var(--color-pink);
+                    font-size: var(--font-defualt);
+                    top: -10px;
+                }
+            }
         }
     }
+
     .play_btn{
+        opacity: 0.7;
         top: calc(50% - 25px);
         left: calc(50% - calc(var(--m-padding-big)/2));
         position: absolute;
