feat : 동영상 페이지 관련 코멘트 기능 추가 23.10.27. gun

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -20,6 +20,9 @@
   --m-padding-micro:4px;
   --m-zIndex-top:100;
   --m-zIndex-topNav:90;
+  --m-zIndex-videoComment:85;
+  --m-zIndex-videoBtn:80;
+  --m-zIndex-video:70;
   --m-zIndex-sideNav:80;
   --m-zIndex-middle:50;
   --m-zIndex-bottomNav:0;
