--- a/app/layouts/mobile/mobile.scss
+++ b/app/layouts/mobile/mobile.scss
@@ -341,18 +341,57 @@
         width: 100%;
         top: calc(100% + 50px);
         z-index: 0;
-        height: 400px;
+        height: 650px;
         position: relative;
         background-color: white;
+        display: flex;
+        flex-direction: column;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        overflow: hidden;
 
         &.open {
             z-index: var(--m-zIndex-videoComment);
             transition: 0.5s ease;
-            top: calc(100% - 350px);
+            top: calc(100% - 600px);
         }
         &.close{
             height: 0px;
             transition: 0.5s ease;
+        }
+
+        .comment_top{
+            display: flex;
+            justify-content: space-between;
+            padding: 0 var(--m-padding-default);
+            height: 40px;
+            align-items: center;
+            border-bottom: 1px solid var(--color-light-gray);
+        }
+        .comment_list_wrap{
+            display: flex;
+            height: 500px;
+            overflow-y: scroll;
+
+            .comment_list{
+                height: 600PX;
+            }
+        }
+        .comment_input{
+            border-top: 1px solid var(--color-light-gray);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0 var(--m-padding-default);
+        }
+
+        .comment_avatar{
+            width: 40px;
+            height: 40px;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            border-radius: 50%;
         }
     }
 }
@@ -365,7 +404,7 @@
 .swiper {
     position: absolute;
     z-index: var(--m-zIndex-video);
-    //overflow: hidden;
+    overflow: hidden;
     width: 100%;
     height: calc(100% - 50px);
     background-color: black;
