feat : comment more loading 23.10.28. gun

--- a/app/layouts/mobile/mobile.scss
+++ b/app/layouts/mobile/mobile.scss
@@ -370,6 +370,7 @@
         }
         .comment_list_wrap{
             display: flex;
+            flex-direction: column;
             height: 500px;
             overflow-y: scroll;
             padding: var(--m-padding-default);
