--- a/app/layouts/mobile/profile/MobileMyProfile.module.scss
+++ b/app/layouts/mobile/profile/MobileMyProfile.module.scss
@@ -1,13 +1,31 @@
 .m_myProfile{
-  display: flex;
+  z-index: var(--m-zIndex-top);
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: white;
   overflow: hidden;
 
+  .myProfile_top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border-bottom: 1px solid var(--color-light-gray);
+    font-size: var(--m-font-large);
+    font-weight: bold;
+
+    div{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 60px;
+    }
+  }
+
   .m_myProfile_detail{
-    padding-top: 40px;
     width: 100%;
     z-index: var(--m-zIndex-top);
     display: flex;
@@ -16,7 +34,7 @@
     background-color: white;
     align-items: center;
     overflow: hidden;
-    height: 350px;
+    height: 300px;
 
     .m_myProfile_avatar{
       width: 100%;
@@ -77,7 +95,7 @@
     .m_myProfile_introduce{
       display: flex;
       width: 250px;
-      height: 50px;
+      height: 40px;
       justify-content: center;
       align-items: center;
       margin-bottom: var(--m-padding-default);
@@ -89,7 +107,7 @@
     }
     .m_myProfile_list_change_btn_list{
       width: 100%;
-      height: 30px;
+      height: 40px;
       border-bottom: 1px solid var(--color-light-gray);
       border-top: 1px solid var(--color-light-gray);
       display: flex;
