feat : profile 페이지 수정 23.10.30. gun

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -18,13 +18,14 @@
   --m-padding-default:12px;
   --m-padding-small:8px;
   --m-padding-micro:4px;
-  --m-zIndex-top:100;
-  --m-zIndex-topNav:90;
-  --m-zIndex-videoComment:85;
-  --m-zIndex-videoBtn:80;
-  --m-zIndex-video:70;
-  --m-zIndex-sideNav:80;
-  --m-zIndex-middle:50;
+  --m-zIndex-popup:100;
+  --m-zIndex-top:70;
+  --m-zIndex-topNav:60;
+  --m-zIndex-videoComment:55;
+  --m-zIndex-videoBtn:50;
+  --m-zIndex-sideNav:50;
+  --m-zIndex-video:40;
+  --m-zIndex-middle:30;
   --m-zIndex-bottomNav:0;
   --font-largest:30px;
   --font-large:18px;
