--- a/app/layouts/mobile/profile/list/ProfileVideoList.module.scss
+++ b/app/layouts/mobile/profile/list/ProfileVideoList.module.scss
@@ -1,10 +1,6 @@
 .profile_video_list{
-  overflow: scroll;
-  position: relative;
   width: 100%;
-  background-color: black;
-  top: 300px;
-  height: calc(100% - 350px);
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
