--- a/app/layouts/mobile/profile/MobileMyProfile.module.scss
+++ b/app/layouts/mobile/profile/MobileMyProfile.module.scss
@@ -1,40 +1,41 @@
+.myProfile_top{
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  border-bottom: 1px solid var(--color-light-gray);
+  font-size: var(--m-font-large);
+  font-weight: bold;
+  z-index: var(--m-zIndex-topNav);
+
+  div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+  }
+}
+
+
 .m_myProfile{
-  z-index: var(--m-zIndex-top);
+  top: 50px;
+  z-index: var(--m-zIndex-middle);
   position: absolute;
   width: 100%;
   height: 100%;
   background-color: white;
-  overflow: hidden;
-
-  .myProfile_top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    background-color: white;
-    border-bottom: 1px solid var(--color-light-gray);
-    font-size: var(--m-font-large);
-    font-weight: bold;
-
-    div{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 60px;
-    }
-  }
 
   .m_myProfile_detail{
     width: 100%;
-    z-index: var(--m-zIndex-top);
+    z-index: var(--m-zIndex-middle);
     display: flex;
     flex-direction: column;
     position: absolute;
     background-color: white;
     align-items: center;
-    overflow: hidden;
-    height: 300px;
 
     .m_myProfile_avatar{
       width: 100%;
