--- a/app/layouts/mobile/profile/MobileMyProfile.module.scss
+++ b/app/layouts/mobile/profile/MobileMyProfile.module.scss
@@ -10,6 +10,7 @@
   font-size: var(--m-font-large);
   font-weight: bold;
   z-index: var(--m-zIndex-topNav);
+  overflow: hidden;
 
   div{
     display: flex;
@@ -22,20 +23,23 @@
 
 .m_myProfile{
   top: 50px;
+  height: calc(100vh - 50px);
   z-index: var(--m-zIndex-middle);
   position: absolute;
   width: 100%;
-  height: 100%;
   background-color: white;
+  overflow: hidden;
 
   .m_myProfile_detail{
     width: 100%;
+    height: calc(100vh - 50px);
     z-index: var(--m-zIndex-middle);
     display: flex;
     flex-direction: column;
     position: absolute;
     background-color: white;
     align-items: center;
+    overflow: scroll;
 
     .m_myProfile_avatar{
       width: 100%;
