--- a/app/layouts/web/web.scss
+++ b/app/layouts/web/web.scss
@@ -4,12 +4,14 @@
     position: fixed;
     width: 100%;
     height: 60px;
-    background-color: white;
+    background-color: var(--color-header);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border-bottom: 0.5px solid var(--color-light-gray);
     justify-content: space-between;
     align-items: center;
 
     .logo{
+        margin: 10px;
         width: 250px;
         display: flex;
         align-items: center;
@@ -22,7 +24,7 @@
     .search{
         height: 45px;
         border-radius: 25px;
-        background-color: var(--color-light-gray);
+        background-color: white;
         display: flex;
         width: 550px;
         transition: 0.3s ease;
@@ -160,19 +162,236 @@
 }
 
 .side_bar{
+    top: 60px;
     position: fixed;
     width: 260px;
     height: 100vh;
     transition: 0.5s ease;
-    background-color: var(--color-light-gray);
-}
+    background-color: var(--color-white);
 
-@media (max-width: 1000px)  {
-
-    .side_bar{
+    @media (max-width: 1000px) {
         width: 100px;
-        background-color: black;
         transition: 0.5s ease;
     }
 
+
+    ul{
+        li{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            button{
+                padding: var(--padding-default);
+                margin: var(--padding-default);
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                width: 100%;
+                @media (max-width: 1000px)  {
+                    padding: 0;
+                    width: 40px;
+                }
+                height: 40px;
+
+                i{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 40px;
+                    height: 40px;
+                    font-size: 25px;
+                }
+                span{
+                    font-size: var(--font-defualt);
+                    //display: none;
+                    @media (max-width: 1000px)  {
+                        display: none;
+
+                    }
+                }
+            }
+        }
+    }
+}
+
+.video_list{
+    top: 60px;
+    position: absolute;
+    width: calc(100% - 260px);
+    left: 260px;
+    height: calc(100vh - 60px);
+    background-color: var(--color-beige);
+    transition: 0.5s ease;
+    display: flex;
+
+    @media (max-width: 1000px)  {
+        width: calc(100% - 100px);
+        left: 100px;
+        transition: 0.5s ease;
+    }
+}
+
+.upload_wrap{
+    top: 60px;
+    position: absolute;
+    width: calc(100% - 260px);
+    left: 260px;
+    height: calc(100vh - 60px);
+    transition: 0.5s ease;
+    display: flex;
+    background-color: var(--color-light-gray);
+
+    @media (max-width: 1000px)  {
+        left: 100px;
+        width: calc(100% - 100px);
+    }
+
+    .upload_main{
+        display: flex;
+        flex-direction: column;
+        left: 260px;
+        top: 60px;
+        margin: 20px;
+        width: calc(100% - 40px);
+        background-color: var(--color-white);
+        border-radius: 10px;
+
+        .upload_title{
+            width: 200px;
+            height: 80px;
+            margin: 30px;
+            h2{
+                margin: 5px;
+            }
+
+            h5{
+                margin: 5px;
+                color: var(--color-gray);
+            }
+        }
+
+        .upload_form{
+            display: flex;
+
+            .upload_video{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 220px;
+                height: 300px;
+                border: 2px dashed rgba(0,0,0,0.2);
+                border-radius: 15px;
+                margin: 35px;
+
+                h5{
+                    margin-bottom: 15px;
+                }
+
+                span{
+                    color: rgba(0,0,0,0.5);
+                    margin: 3px;
+                    font-size: var(--m-font-micro);
+                }
+
+                .video_upload_btn{
+                    font-weight: bold;
+                    height: 30px;
+                    padding: 0 calc(var(--padding-large)*1.5);
+                    margin: var(--padding-small);
+                    font-size: var(--font-defualt);
+                    border-radius: 5px;
+                    width: 130px;
+                    color: var(--color-white);
+                    background-color: var(--color-light-pink);
+                    &:hover {
+                        background-color: var(--color-pink);
+                    }
+                }
+            }
+            .upload_info{
+                width: 600px;
+                margin: 10px 0;
+                display: flex;
+                flex-direction: column;
+                overflow: hidden;
+
+                label{
+                    font-weight: bold;
+                    margin-bottom: 5px;
+                }
+                div{
+                    margin-bottom: 20px;
+                    width: 600px;
+                    display: flex;
+                    flex-direction: column;
+
+                    input{
+                        border: 1px solid rgba(0,0,0,0.2);
+                        height: 40px;
+                        width: 100%;
+                    }
+
+                    textarea{
+                        border: 1px solid rgba(0,0,0,0.2);
+                        height: 120px;
+                        width: 100%;
+                        resize: none;
+                    }
+
+                    input:focus{
+                        border: 1px solid black;
+                    }
+
+                    select{
+                        width: 300px;
+                        height: 30px;
+                        border: 1px solid rgba(0,0,0,0.2);
+                    }
+
+                }
+                .form_btn_wrap{
+                    display: flex;
+                    flex-direction: unset;
+
+                    .form_post_btn,
+                    .form_cancle_btn{
+                        width: 50px;
+                        height: 30px;
+                        border: 1px solid var(--color-gray);
+                        margin: 10px 10px 10px 0;
+                        border-radius: 5px;
+
+                        &:hover {
+                            background: rgb(77,77,77);
+                            color: #fff;
+                        }
+                    }
+                }
+
+
+                .thumn_upload_btn {
+                    font-weight: bold;
+                    width: 150px;
+                    height: 30px;
+                    background: #fff;
+                    border: 1px solid rgba(0,0,0,0.2);
+                    border-radius: 10px;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    &:hover {
+                        background: rgb(77,77,77);
+                        color: #fff;
+                    }
+                }
+
+                #file {
+                    display: none;
+                }
+            }
+        }
+    }
 }
