--- a/app/layouts/mobile/profile/MobileMyProfile.module.scss
+++ b/app/layouts/mobile/profile/MobileMyProfile.module.scss
@@ -20,10 +20,15 @@
   }
 }
 
-
+.myProfile_wrap{
+  width: 100%;
+  height: calc(100%);
+  overflow: hidden;
+  position: absolute;
+}
 .m_myProfile{
   top: 50px;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 55px);
   z-index: var(--m-zIndex-middle);
   position: absolute;
   width: 100%;
@@ -32,7 +37,7 @@
 
   .m_myProfile_detail{
     width: 100%;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 55px);
     z-index: var(--m-zIndex-middle);
     display: flex;
     flex-direction: column;
