--- a/app/layouts/web/views/login/login.module.scss
+++ b/app/layouts/web/views/login/login.module.scss
@@ -35,7 +35,8 @@
       align-items: center;
 
 
-      .login_email_form{
+      .login_email_form,
+      .login_join_form{
         position: relative;
         top: 10px;
         width: 300px;
@@ -59,11 +60,25 @@
             background-color: var(--color-pink);
           }
         }
+        label{
+          padding-top: 10px;
+          display: flex;
+          align-items: center;
+          margin : 0 0 0 10px;
+        }
 
         span{
           display: flex;
           align-items: center;
           margin : 5px 0 15px 10px;
+          font-size: var(--font-small);
+        }
+
+        h5{
+
+          display: flex;
+          align-items: center;
+          margin: 5px 0 15px 10px;
           font-size: var(--font-small);
         }
 
