feat : 모바일 로그인 회원가입 관련 구현 23.11.05. gun

--- a/app/layouts/mobile/mobile.scss
+++ b/app/layouts/mobile/mobile.scss
@@ -259,6 +259,17 @@
             display: flex;
             border-radius: 50%;
         }
+        .comment_need_login{
+             width: 200px;
+             height: 50px;
+             justify-content: center;
+             align-items: center;
+             display: flex;
+             border-radius: 50%;
+            span{
+                font-weight: bold;
+            }
+        }
     }
 }
 .a{
