feat : web profile 개발 23.11.05.gun

--- a/app/layouts/web/web.scss
+++ b/app/layouts/web/web.scss
@@ -317,7 +317,7 @@
                 }
             }
             .upload_info{
-                width: 600px;
+                width: 80%;
                 margin: 10px 0;
                 display: flex;
                 flex-direction: column;
@@ -329,7 +329,7 @@
                 }
                 div{
                     margin-bottom: 20px;
-                    width: 600px;
+                    width: 80%;
                     display: flex;
                     flex-direction: column;
 
