feat : 대격변 23.11.06. gun

--- a/app/layouts/mobile/bottom/MobileBottomNav.module.scss
+++ b/app/layouts/mobile/bottom/MobileBottomNav.module.scss
@@ -1,7 +1,7 @@
 .m_bottom_nav{
   height: 55px;
   background-color: var(--color-black);
-  position: fixed;
+  position: absolute;
   width: 100%;
   bottom: 0;
 
