--- a/app/layouts/mobile/profile/MobileMyProfile.module.scss
+++ b/app/layouts/mobile/profile/MobileMyProfile.module.scss
@@ -1,16 +1,22 @@
+
+.scroll::-webkit-scrollbar {
+  display: none;
+}
+.scroll {
+  -ms-overflow-style: none; /* 인터넷 익스플로러 */
+  scrollbar-width: none; /* 파이어폭스 */
+}
+
 .myProfile_top{
-  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 50px;
   background-color: white;
-  border-bottom: 1px solid var(--color-light-gray);
+  border-bottom: 1px solid lightgray;
   font-size: var(--m-font-large);
   font-weight: bold;
-  z-index: var(--m-zIndex-topNav);
-  overflow: hidden;
 
   div{
     display: flex;
@@ -25,6 +31,7 @@
   height: calc(100%);
   overflow: hidden;
   position: absolute;
+  border-radius: 20px;
 }
 .m_myProfile{
   top: 50px;
@@ -35,6 +42,9 @@
   background-color: white;
   overflow: hidden;
 
+  .m_myProfile_detail::-webkit-scrollbar {
+    display: none; /* 크롬, 사파리, 오페라, 엣지 */
+  }
   .m_myProfile_detail{
     width: 100%;
     height: calc(100vh - 55px);
@@ -45,6 +55,8 @@
     background-color: white;
     align-items: center;
     overflow: scroll;
+    -ms-overflow-style: none; /* 인터넷 익스플로러 */
+    scrollbar-width: none; /* 파이어폭스 */
 
     .m_myProfile_avatar{
       width: 100%;
