feat : 좋아요 변동 및 이슈 처리 23.11.07. gun

--- a/app/layouts/mobile/upload/MobileUpload.module.scss
+++ b/app/layouts/mobile/upload/MobileUpload.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: var(--m-zIndex-top);
   width: 100%;
-  height: calc(100% - 50px);
+  height: 100%;
   overflow: hidden;
 }
 
