--- a/app/layouts/mobile/mobile.scss
+++ b/app/layouts/mobile/mobile.scss
@@ -164,7 +164,7 @@
         width: 100%;
         top: calc(100% + 50px);
         z-index: 0;
-        height: 650px;
+        height: 50%;
         position: relative;
         background-color: white;
         display: flex;
@@ -174,9 +174,10 @@
         overflow: hidden;
 
         &.open {
-            z-index: var(--m-zIndex-videoComment);
+            z-index: 999;
+            height: 100%;
             transition: 0.5s ease;
-            top: calc(100% - 600px);
+            top: 50%;
         }
         &.close{
             height: 0;
@@ -194,13 +195,21 @@
         .comment_list_wrap{
             display: flex;
             flex-direction: column;
-            height: 500px;
+            height: calc(50% - 50px);
             overflow-y: scroll;
+            overflow-x: hidden;
             padding: var(--m-padding-default);
+            -ms-overflow-style: none; /* for Internet Explorer, Edge */
+            scrollbar-width: none; /* for Firefox */
 
+            .comment_list_wrap::-webkit-scrollbar {
+                display: none;
+            }
             .comment_list{
                 height: 600PX;
                 width: 100%;
+                -ms-overflow-style: none !important; /* 인터넷 익스플로러 */
+                scrollbar-width: none !important;/* 파이어폭스 */
 
                 .comment_detail{
                     display: flex;
@@ -208,7 +217,7 @@
                     padding-bottom: var(--m-padding-big);
 
                     .comment_info{
-                        width: 100%;
+                        width: calc(100% - 40px);
                         display: flex;
                         flex-direction: column;
                         align-items: start;
@@ -247,16 +256,18 @@
         .comment_input{
             border-top: 1px solid var(--color-light-gray);
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
+            bottom: 40px;
             align-items: center;
             padding: 0 var(--m-padding-default);
+            position: relative;
         }
 
         .comment_avatar{
             width: 40px;
             height: 40px;
             justify-content: center;
-            align-items: center;
+            align-self: center;
             display: flex;
             border-radius: 50%;
         }
